[package]
name = "bezel-installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[build-dependencies]
registry = "1.2.2"
walkdir = "2.3.2"

[dependencies]
xml-doc = "0.2.0"
zip = { version = "0.6.2", default-features = false, features = ["deflate"]}
